# krunner-bigclock

./: .gitignore  AGENTS.md  CMakeLists.txt  README.md  org.kde.krunner-bigclock.metainfo.xml
LICENSES/: MIT.txt
debian/: changelog  control  copyright
packaging/arch/: PKGBUILD
packaging/rpm/: krunner-bigclock.spec
src/: bigclockapp.cpp  bigclockconfig.cpp  bigclockconfig.h  bigclockconfig.json  bigclockrunner.cpp  bigclockrunner.h  bigclockwidget.cpp  bigclockwidget.h  metadata.json
